fixes #19 .. make resize indicator unique to each ATable #20 .. add 'visible' property to columns, and don't render them if it is false closes #21 .. make Column.idAttribute = name, remove unnecessary columnsByName hash in collection

--- a/src/css/atable.css
+++ b/src/css/atable.css
@@ -64,7 +64,7 @@
     padding: 20px 20px 10px 20px;
 }
 
-.grayout {
+.resizeIndicator {
     display: none;
     position: absolute;
     background: gray;
